[tool.poetry]
name = "sila2-server-pd-pump"
version = "0.0.1"
description = ""
authors = ["Thiago Meyer <tiagmey@gmail.com>"]
readme = "README.md"
packages = [{include = "pump_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
py-pd-stepper-pump = "^0.1.0"
pyyaml = "^6.0.2"
 cerberus = "^1.3.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
ignore_missing_imports = true